[gd_scene load_steps=9 format=3 uid="uid://cdcbv68l7mevp"]

[ext_resource type="Script" uid="uid://cdg0y5y5rjgjk" path="res://new_player/friendly_ship.gd" id="1_roj7t"]
[ext_resource type="SpriteFrames" uid="uid://ch4im1rilc4hk" path="res://assets/Ships/ship_frames.tres" id="2_x3hw2"]
[ext_resource type="Script" uid="uid://dgkclkobpug1q" path="res://new_player/ship_movement_component.gd" id="4_go85f"]
[ext_resource type="PackedScene" uid="uid://llttm3t64occ" path="res://new_player/ram_area.tscn" id="5_acmpf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_go85f"]
radius = 8.0
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acmpf"]
size = Vector2(7.5, 7.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_go85f"]
radius = 600.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8lgvm"]
b = Vector2(0, 1)

[node name="FriendlyShip" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_roj7t")
view_range = 600

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("2_x3hw2")
animation = &"green"

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("CapsuleShape2D_go85f")

[node name="FrontShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 20.5)
rotation = 0.785398
shape = SubResource("RectangleShape2D_acmpf")

[node name="ShipMovementComponent" type="Node" parent="." node_paths=PackedStringArray("character")]
unique_name_in_owner = true
script = ExtResource("4_go85f")
character = NodePath("..")
steering_angle = 30.0
power = 100.0
friction = 30.0
drag = 0.1
traction = 0.8
brakes = 100.0
ship_length = 50.0
metadata/_custom_type_script = "uid://dgkclkobpug1q"

[node name="ViewArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewArea"]
shape = SubResource("CircleShape2D_go85f")

[node name="RamArea" parent="." instance=ExtResource("5_acmpf")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RamArea"]
position = Vector2(0, 26)
shape = SubResource("SegmentShape2D_8lgvm")
